@@ -37,3 +37,4 @@ yacybar_proxyoff=Proxy ist AUS
 yacybar_indexingon=Indexierung ist AN
 yacybar_indexingoff=Indexierung ist AUS
 yacybar_problem_xml=FEHLER: Es gab ein Problem beim Abrufen der XML Daten:\n
+yacybar_request_error=Fehler bei der Anfrage
