@@ -37,3 +37,4 @@ yacybar_proxyon=Proxy is ON
 yacybar_indexingon=Indexing is ON
 yacybar_indexingoff=Indexing is OFF
 yacybar_problem_xml=ERROR: There was a problem retrieving the XML data:\n
+yacybar_request_error=request error
