@@ -8,6 +8,7 @@ x fixed problem with yacybar_crawljobs.rdf (flori)
 x fixed not connected statusbar (flori)
 + added https-support (flori)
 + added passwordmanagment for firefox3 (flori)
++ added error handling for bookmarkmenu and surftipsmenu (flori)
 
 v 0.2.4 - 05.02.2008
 =====================================================================
